Implemented endpoint to request content based on a user
